--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,10 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <title>My 2nd website</title>
   </head>
   <body>
-    <h1>Edison</h1>
+    <h1>Redmart Sinatra</h1>
       <%= yield %>
   </body>
 </html>
