--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,14 +2,27 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <title>My 2nd website</title>
+    <title>Redmart Sinatra</title>
+
+    <link rel="stylesheet" href="css/style.css" media="screen" title="no title" charset="utf-8">
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Redmart Sinatra</h1>
+    <div class="container">
+      <header>
+        <h1>Redmart Sinatra</h1>
+        <nav>
+          <ul>
+            <li><a href="/users">Users</a></li>
+            <li><a href="/products">Products</a></li>
+          </ul>
+        </nav>
+      </header>
+
       <%= yield %>
+    </div>
+    <script src="js/script.js" charset="utf-8"></script>
   </body>
 </html>
